[workspace]
resolver = "2"
members = ["compiler", "lang", "lexer", "parser", "semantics", "transpiler"]

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
panic = "deny"

[workspace.lints.rust]
missing_docs = "deny"
